...
            "state" : "translated",
            "value" : "Foti hinzuefüege"
          }
        }
      }
    },
    "Add Recipe" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rezept hinzufügen"
          }
...
            "state" : "translated",
            "value" : "Erhitze"
          }
        }
      }
    },
    "Home" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
          }
...
      }
    },
    "Hours" : {
      "comment" : "A label for the \"Hours\" section of the time picker sheet.",
      "isCommentAutoGenerated" : true
    },
    "Import failed" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Import fehlgeschlagen"
...
            "state" : "translated",
            "value" : "Import fählgschlage"
          }
        }
      }
    },
    "Import PDF" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "PDF importieren"
          }
...
            "state" : "translated",
            "value" : "Rezept-URL iifüege..."
          }
        }
      }
    },
    "Photo Library" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fotomediathek"
          }
...
            "state" : "translated",
            "value" : "Rezept-Import"
          }
        }
      }
    },
    "Recipe imported!" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rezept importiert!"
...
            "state" : "translated",
            "value" : "Schritt wärded i de Originalsprach importiert, ohni umformuliert z wärde."
          }
        }
      }
    },
    "Supports:" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unterstützt:"
          }
...
            "state" : "translated",
            "value" : "System Standard"
          }
        }
      }
    },
    "Take Photo" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Foto aufnehmen"
          }
...
            "state" : "translated",
            "value" : "Version"
          }
        }
      }
    },
    "Video" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Video"
          }
...
